テストコード

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -15,6 +15,10 @@ ja:
        text: 本文
        image: 画像
        user_id: ユーザー
+     gears_maker:
+       gear_name: ギア名
+       maker_name: メーカー
+       gear_genre_id: ジャンル
  time:
    formats:
      default: "%Y年%m月%d日 %H:%M"
